exercise(17.17): - css align fixes added

--- a/2-Form/styles/style.css
+++ b/2-Form/styles/style.css
@@ -20,6 +20,10 @@ main {
     border-radius: 10px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding: 72px 95px 91px;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 form {
@@ -160,7 +164,7 @@ input:user-invalid {
     background-color:rgba(255, 255, 255, 1);
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 920px) {
 
     main {
         padding: 72px 20px 91px;
@@ -168,6 +172,10 @@ input:user-invalid {
 
     .name {
         width: 100%;
+    }
+
+    button > img {
+        display: none;
     }
 
     #firstName {
